@@ -35,7 +35,7 @@ import dk.dbc.opensearch.common.types.CargoContainer;
 import dk.dbc.opensearch.common.types.CargoObject;
 import dk.dbc.opensearch.common.types.DataStreamType;
 
-
+import java.io.ByteArrayOutputStream;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.util.Collections;
@@ -193,15 +193,30 @@ public class OwnerRelation implements IRelation
         Invocable inv = lookupJavaScript( submitter );
 
         FedoraRelsExt rels = (FedoraRelsExt) cargo.getMetaData( DataStreamType.RelsExtData );
+        if( null == cargo.getIdentifier() || cargo.getIdentifier().isEmpty() )
+        {
+            log.warn( String.format( "CargoContainer has no identifier, this will be a problem in the RELS-EXT generation/validation" ) );
+        }
+
         if( null == rels )
         {
             rels = new FedoraRelsExt( cargo.getIdentifier() );
         }
         
+        log.debug( String.format( "Got RelsExt with id '%s'", rels.getIdentifier() ) );
+
+        if( ! rels.getIdentifier().equals( cargo.getIdentifier() ) )//then something has gone terribly wrong
+        {
+            String error = String.format( "CargoContainer data has different identifier ('%s') than its Rels-ext metadata identifier (%s) ", cargo.getIdentifier(), rels.getIdentifier() );
+            log.error( error );
+            throw new PluginException( error );
+        }
+        
         rels = ( FedoraRelsExt ) inv.invokeFunction( "addOwnerRelation", 
                                                      rels, 
                                                      submitter, 
-                                                     format );        
+                                                     format );
+
         cargo.addMetaData( rels );
     }
 
